create-pod-alpine.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: k8-training-pod-alpine-app
  labels:
    app.kubernetes.io/name: my-kube-svc
spec:
  containers:
    - name: alpine-app-pod
      image: alpine-app
      imagePullPolicy: Never
