create-pods.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: k8-training-pod
  labels:
    app.kubernetes.io/name: my-kube-svc
spec:
  containers:
    - name: flask-app-pod
      image: flask-app 
      resources:
        requests:
          cpu: 100m
          memory: 128M
        limits:
          cpu: 250m
          memory: 256M
      ports:
        - containerPort: 5000
          name: flask-app-port
      imagePullPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  name: k8-training-pod-alpine-app
  labels:
    app.kubernetes.io/name: my-kube-svc
spec:
  containers:
    - name: alpine-app-pod
      image: alpine-app
      imagePullPolicy: Never
