manifest.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
    - name: simple-test
      image: test:1.0
      resources:
        requests:
          cpu: 100m
          memory: 128M
        limits:
          cpu: 250m
          memory: 256M
      ports:
        - containerPort: 5000
      imagePullPolicy: Never
