create-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: k8-training-service
spec:
  selector:
    app.kubernetes.io/name: my-kube-svc
  ports:
    - protocol: TCP
      port: 5005
      targetPort: flask-app-port
